Particle hair weights are not preserved (for dynamic hair) #55203

Closed
opened 2018-05-25 14:57:11 +02:00 by Andy Goralczyk · 5 comments
Member

Broken: 2.8 Hash 8510472198
Works: 2.79

Particle hair used to have a weight distribution that would make it stick to its emitter when simulated.
This weight does not seem to be retained in 2.8, as the hair simply falls down on its roots.

Example file (2.79 file that should work in 2.8): hair_dyn_weights279.blend

Video showing the expected behavior and the error: hair_dynamics_weight-2018-05-25_14.51.05.mp4

Broken: 2.8 Hash 85104721980 Works: 2.79 Particle hair used to have a weight distribution that would make it stick to its emitter when simulated. This weight does not seem to be retained in 2.8, as the hair simply falls down on its roots. Example file (2.79 file that should work in 2.8): [hair_dyn_weights279.blend](https://archive.blender.org/developer/F3454405/hair_dyn_weights279.blend) Video showing the expected behavior and the error: [hair_dynamics_weight-2018-05-25_14.51.05.mp4](https://archive.blender.org/developer/F3454409/hair_dynamics_weight-2018-05-25_14.51.05.mp4)
Author
Member

Added subscriber: @eyecandy

Added subscriber: @eyecandy

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Sergey Sharybin was assigned by Dalai Felinto 2018-05-25 15:53:24 +02:00

This fails even with copy on write disabled.

This fails even with copy on write disabled.

This issue was referenced by 2bb4977c4a

This issue was referenced by 2bb4977c4a85c78b8844e47d32c54ccf8e2d7613

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55203
No description provided.