Fix T55203: Particle hair weights are not preserved